# hologram-ai

./: .gitignore  .holoarch.toml  AGENTS.md  CLAUDE.md  CONFORMANCE.md  Cargo.toml  Justfile  NEW_HOLOGRAM_API.md  README.md  VERIFICATION.md  archon.repo.yaml  archon.yaml  index.html  justfile  rust-toolchain.toml  test_cors.js
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep  hologram-ai-x86_64-unknown-linux-gnu
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: known_models.rs  lib.rs  log_buffer.rs  main.rs  paths.rs  state.rs
crates/hologram-ai/: Cargo.toml
crates/hologram-ai-common/: Cargo.toml
crates/hologram-ai-common/src/: error.rs  exec_context.rs  lib.rs  metadata.rs  rope.rs  serialization.rs  weights.rs
crates/hologram-ai-common/src/ir/: dtype.rs  graph.rs  mod.rs  node.rs  op.rs  param.rs  shape.rs
crates/hologram-ai-common/src/lower/: builder.rs  custom_ops.rs  dispatch.rs  dtype.rs  mod.rs  op_resolver.rs  quantize.rs  quantize_graph.rs  resolve_encodings.rs  shape_spec_bridge.rs  strategy.rs
crates/hologram-ai-common/src/mem/: mod.rs  planner.rs
crates/hologram-ai-common/src/opt/: add_rmsnorm_fusion.rs  attention_fusion.rs  const_dedup.rs  const_eval.rs  (+34 more)
crates/hologram-ai-common/tests/: attention_mask_independence.rs  fusion_metrics.rs  onnx_conformance.rs
crates/hologram-ai-conformance/: Cargo.toml
crates/hologram-ai-conformance/fixtures/: generate.py  mlp.onnx
crates/hologram-ai-conformance/src/: alloc.rs  comparator.rs  exec_comparator.rs  lib.rs  ort_runner.rs  reference.rs  tolerance.rs  validate_ort.rs  witness.rs
crates/hologram-ai-conformance/tests/: bdd.rs  exec_conformance.rs  fetch_helper.rs  honesty.rs  onnx_spec_conformance.rs  op_conformance.rs  ort_conformance.rs  ort_full_model_e2e.rs  published_model_ort_e2e.rs  quant_conformance.rs  quant_golden.rs  real_model_compile_ee_pv.rs  real_model_generation.rs  real_model_generation_qwen2.rs  structural_ce.rs  structural_cf.rs  structural_im.rs  structural_lw.rs  structural_za.rs  structural_zm.rs  tokenizer_conformance.rs
crates/hologram-ai-gguf/: Cargo.toml
crates/hologram-ai-gguf/src/: dequant.rs  error.rs  lib.rs  metadata.rs  parser.rs
crates/hologram-ai-model/: Cargo.toml
crates/hologram-ai-model/src/: honesty.rs  lib.rs
crates/hologram-ai-onnx/: Cargo.toml  README.md  build.rs
crates/hologram-ai-onnx/benches/: simd_activation_bench.rs
crates/hologram-ai-onnx/examples/: classify_image.rs  debug_resnet.rs  inspect_model.rs  resnet_inference.rs  run_resnet.rs  simple_mlp.rs  test_conv_bn.rs  test_conv_only.rs  test_residual.rs  test_resnet_chain.rs  trace_resnet.rs  trace_transpose.rs
crates/hologram-ai-onnx/proto/: onnx.proto
crates/hologram-ai-onnx/src/: builder.rs  dtype_map.rs  dtypes.rs  error.rs  graph_builder.rs  lib.rs  op_map.rs  ops.rs  parser.rs  tensor_map.rs
crates/hologram-ai-onnx/tests/: bert_compilation.rs  bert_decode.rs  e2e_compile.rs  integration_checklist.rs  lightweight_tests.rs  mock_models.rs  parallel_view_integration.rs  test_real_models.rs
crates/hologram-ai-tokenizer/: Cargo.toml
crates/hologram-ai-tokenizer/src/: archive.rs  bpe.rs  config.rs  lib.rs  native.rs  sentencepiece.rs  streaming.rs  tokenizer_json.rs  unigram.rs  vocab.rs  wordpiece.rs
crates/hologram-ai-tokenizer/tests/: sentencepiece_model.rs  streaming_detok.rs
crates/hologram-ai-wasm/: Cargo.toml
crates/hologram-ai-wasm/src/: lib.rs  probe.holo
crates/hologram-ai/benches/: inference.rs  optimization_benchmark.rs  scaling.rs
crates/hologram-ai/examples/: dump_logits.rs  kv_rehash_cost.rs  optimized_execution.rs  spec_acceptance.rs  text_generation.rs
crates/hologram-ai/src/: address.rs  cli.rs  compiler.rs  decode.rs  engine.rs  fixture.rs  lib.rs  main.rs  materialize.rs  quantized.rs  runner.rs  session.rs  speculative.rs  staged.rs  stats.rs  stream.rs  validate.rs
crates/hologram-ai/tests/: archive_extensions.rs  bert_e2e.rs  decode_family_coverage.rs  decode_growth_residency.rs  decode_memory_large.rs  decode_perf.rs  diag_backend.rs  diag_qwen25_int8.rs  diag_qwen2_gqa_shapes.rs  diag_qwen2_post_concretize.rs  diag_smollm2_backend.rs  draft_pairing.rs  generation_streaming.rs  generation_synthetic.rs  int8_accuracy.rs  low_precision_lut.rs  ma_external_models.rs  materialize_e2e.rs  mini_fixture.rs  multi_component_e2e.rs  omajor_i4_substrate_contract.rs  omajor_w8a8_substrate_contract.rs  parametric_reference.rs  perf_contract.rs  perf_contract_large.rs  quant_arbitrary_models.rs  quant_memory_characterization.rs  quantized_head_residency.rs  quantized_weight_memory.rs  qwen2_e2e.rs  resnet50_e2e.rs  rope_scaling_reference.rs  run_arbitrary_models.rs  sd_pipeline_e2e.rs  sd_text_encoder_e2e.rs  sd_unet_e2e.rs  sd_vae_e2e.rs  speculative_resident.rs  test_t5_encoder.rs  test_t5_generation_fullseq.rs  (+7 more)
crates/hologram-onnx-cli/: Cargo.toml
crates/hologram-onnx-cli/src/: bundle.rs  compile.rs  download.rs  info.rs  lib.rs  main.rs  run.rs  translator.rs  validate.rs
crates/hologram-onnx-cli/tests/: e2e_tests.rs
crates/hologram-onnx-config/: Cargo.toml
crates/hologram-onnx-config/src/: config.rs  conversion.rs  error.rs  lib.rs  unified.rs
crates/hologram-onnx-config/tests/: handler_tests.rs
crates/hologram-onnx-core/: Cargo.toml
crates/hologram-onnx-core/src/: bundle.rs  config.rs  error.rs  interpreter.rs  ir_to_graph.rs  lib.rs  parser.rs  partitioning.rs  serialization.rs  shapes.rs  translator.rs  weights.rs
crates/hologram-onnx-core/tests/: decomposition_tests.rs  integration_tests.rs  interpreter_tests.rs  partitioning_tests.rs  unet_e2e_tests.rs
crates/hologram-onnx-ops/: Cargo.toml
crates/hologram-onnx-ops/src/: lib.rs  test_utils.rs  translator.rs  utils.rs
crates/hologram-onnx-ops/tests/: advanced_tests.rs  decomposition_tests.rs  numerical_correctness_tests.rs  tier1_tests.rs
crates/hologram-onnx-spec/: Cargo.toml  build.rs
crates/hologram-onnx-spec/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: fixture.rs  main.rs
(+711 files in other folders)
