[workspace]
resolver = "2"
members = [
    "crates/*",
    "xtask",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/uor-framework/hologram-ai"

[workspace.dependencies]
# hologram is UOR-native: there is no umbrella `hologram` crate anymore.
# Consumers depend on the individual member crates, pinned together to one
# Hologram-Technologies/hologram revision.
#
# Pinned to a `rev`, not a `tag`: this is substrate **v0.8.1** (its workspace
# `version = "0.8.1"`), which is not git-tagged yet. rev 0120c94 is main HEAD =
# v0.8.0 + 4 commits, all the weightless-OUTPUT_MAJOR work we requested (the
# validator fix, a first-class `insert_external` weightless binding, the
# silent-wrong fix, and two end-to-end witnesses). A rev pin is immutable and
# reproducible — the same thing a tag would resolve to; swap it for `tag =
# "v0.8.1"` once that tag is published. Advance all crates together.
# Runtime-core crates (types/ops/graph) are no_std-capable (default = []); the
# host-shell stack (compiler/exec/archive/backend) is built with `std`.
hologram-types    = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04" }
hologram-ops      = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04" }
hologram-graph    = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04" }
hologram-compiler = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04" }
# `parallel` (rayon) is NOT pinned here — it cannot run on wasm32 (no threads).
# It is an opt-in feature, enabled by default for native consumers (the
# `hologram-ai` lib/CLI) via their own `parallel` feature, and left off for the
# `hologram-ai-wasm` browser build. See ADR-0017.
hologram-exec     = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04" }
hologram-archive  = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04", features = ["model-formats"] }
hologram-backend  = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04" }
hologram-host     = { git = "https://github.com/Hologram-Technologies/hologram.git", rev = "0120c9462ebc1dddbc00fc7ff6577a8473411d04" }
holospaces        = { git = "https://github.com/Hologram-Technologies/holospaces.git", branch = "main" }

# workspace-internal
hologram-ai-quant  = { path = "crates/hologram-ai-quant" }
hologram-ai-common = { path = "crates/hologram-ai-common" }
hologram-ai-onnx   = { path = "crates/hologram-ai-onnx" }
hologram-ai-tokenizer = { path = "crates/hologram-ai-tokenizer" }
hologram-ai-safetensors = { path = "crates/hologram-ai-safetensors" }
hologram-ai-core   = { path = "crates/hologram-ai-core" }
hologram-ai-model  = { path = "crates/hologram-ai-model" }

criterion     = { version = "0.5", features = ["html_reports"] }

# third-party
anyhow        = "1"
thiserror     = "2"
half          = { version = "2", features = ["std"] }
smallvec      = { version = "1", features = ["union"] }
bytes         = "1"
memmap2       = "0.9"
bytemuck      = { version = "1", features = ["derive"] }
indexmap      = { version = "2", features = ["serde"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
tracing       = "0.1"
futures       = "0.3"
approx        = "0.5"
clap          = { version = "4", features = ["derive"] }
prost         = "0.13"
reqwest       = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
indicatif     = "0.17"
tokio         = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "time"] }
tempfile      = "3"
sha2          = "0.10"
dirs          = "5"
which         = "7"
rayon         = "1"
rkyv          = "0.8"
blake3        = "1"
parking_lot   = "0.12"

# Keep debug symbols but optimize enough for usable LLM inference (~10-50x faster).
[profile.dev]
opt-level = 2

# Release: full optimization with thin LTO and single codegen unit.
# codegen-units = 1 yields 10-20% for compute-bound workloads.
# Whole-program (fat) LTO adds cross-crate inlining (benefits hologram base kernels).
#
# `lto = "thin"` here was BOTH incoherent and broken. Incoherent: with a single
# codegen unit there is nothing for ThinLTO to thin — its whole design is to
# parallelize across many units. Broken: `thin` + `codegen-units = 1` drops a
# generic instantiation of std's own vendored hashbrown, and the release link of
# `real_model_generation` fails with
#
#   rust-lld: error: undefined symbol:
#     <hashbrown::raw::RawTable<(String, ())>>::reserve_rehash::<…>
#     >>> referenced by hologram_ai … HashMap<String, (), RandomState>::insert
#
# `hologram-ai` has no hashbrown dependency; it calls `std::collections::HashSet
# <String>::insert`. Reproduced from a cold build on rustc 1.95.0 AND 1.97.0, so
# it is not toolchain drift. Bisected: `lto = "off"` links, `thin` +
# `codegen-units = 16` links, and `fat` + `codegen-units = 1` links — the last
# preserves the whole-program optimization the benchmark numbers were measured
# under, so it is the one taken.
#
# This sank the nightly Architecture Regression Matrix from 2026-06-22 until
# 2026-07-10 — 20+ consecutive red runs, live SmolLM2 + Qwen2.5 coverage dark —
# while `ci` stayed green. It flipped mid-stream on an UNCHANGED commit
# (b10a544 green 06-21, red 06-22, same rustc 1.96.0), because
# `Swatinem/rust-cache` was restoring an already-linked test binary. The link
# failure predated the flip; the cache merely hid it.
[profile.release]
lto = "fat"
codegen-units = 1
