[package]
name    = "hologram-ai-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Multi-core execution (rayon). Off by default so the runtime core stays
# wasm-buildable (class NS); native consumers enable it. Cascades to the backend
# via hologram-exec's own `parallel` feature.
parallel = ["hologram-exec/parallel"]

[dependencies]
hologram-ai-quant.workspace = true
# hologram 0.5.0 member crates — lowering produces a canonical Graph of OpKinds.
hologram-types.workspace   = true
hologram-ops.workspace     = true
hologram-graph.workspace   = true
hologram-exec.workspace    = true
hologram-archive.workspace = true
# The output-major/W8A8 declaration predicate reads the substrate's OWN derived
# facts (`quant_tier`, `mm_act_quant::K_MAX`) rather than restating them. See
# `lower::quantize::omajor_w8a8_servable`.
hologram-backend.workspace = true
holospaces.workspace = true

half.workspace      = true
smallvec.workspace  = true
bytemuck.workspace  = true
indexmap.workspace  = true
serde.workspace     = true
thiserror.workspace = true
anyhow.workspace    = true
tracing.workspace   = true
rayon.workspace     = true
rkyv.workspace      = true
blake3.workspace    = true
