[package]
name = "hologram-ai-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conformance testing for hologram float kernels against ONNX Runtime"

[dependencies]
hologram-types = { workspace = true }
hologram-ops = { workspace = true }
hologram-graph = { workspace = true }
# Native-only conformance harness: re-enable the host-shell `std` the workspace
# now pins off by default (ADR-0018). `hologram-ai-common/std` cascades to
# exec/archive/backend, but list exec/archive explicitly too — this crate builds
# without the `hologram-ai` feature (no unification through it) in its base form.
hologram-exec = { workspace = true, features = ["std"] }
hologram-archive = { workspace = true, features = ["std"] }
hologram-ai-common = { workspace = true, features = ["std"] }
hologram-ai-quant = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
serde_json = { workspace = true }

# ORT + model validation deps — behind `conformance` feature.
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }
hologram-ai = { path = "../hologram-ai", optional = true }
hologram-ai-onnx = { workspace = true, optional = true }
hologram-ai-tokenizer = { workspace = true, optional = true }
safetensors = "0.4.5"
hologram-ai-safetensors = { version = "0.1.0", path = "../hologram-ai-safetensors" }

[features]
conformance = ["ort", "ndarray", "hologram-ai", "hologram-ai-onnx", "hologram-ai-tokenizer"]
# Authoritative ONNX operator-spec conformance (classes IM/LW/EE): imports the
# official ONNX backend node-test corpus and validates compile+run against the
# spec's expected outputs. No ORT needed — the corpus ships the outputs.
onnx-spec = ["hologram-ai", "hologram-ai-onnx", "hologram-ai-tokenizer"]
# Structural V&V (classes ZA/ZM/CE): counting-allocator harness + zero-movement
# / content-addressed-elision instrumentation. The CE/ZM tests need the full
# compile→exec stack (a real schedule to walk + κ-label-counting accessors on
# `HoloRunner`); the ZA tests are self-contained on the counting allocator.
structural = ["hologram-ai", "hologram-ai-onnx", "hologram-ai-tokenizer"]
# Performance V&V (class PV): release benches with per-stage budgets.
perf = []

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
approx = { workspace = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hologram-ai-core = { workspace = true }
holospaces = { workspace = true }
# Authoritative tokenizer reference (HuggingFace `tokenizers`) for the TK class.
# Loads `tokenizer.json` and validates encode/decode against the published
# tokenizer the model was trained with — never against our own output.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
reqwest = { workspace = true, features = ["json"] }
hologram-ai = { path = "../hologram-ai" }
hologram-ai-tokenizer = { workspace = true }
hologram-ai-model = { workspace = true }
blake3 = { workspace = true }

# The model-driven Gherkin runner (see model/dictionary.toml). No
# `required-features`: the default lane must build and run with a bare
# `cargo test -p hologram-ai-conformance --test bdd` (dev-dependencies are
# unconditional). ORT-backed step bodies live behind the `conformance`
# feature; their registrations stay unconditional and fail loud — never
# skip — when invoked from a build without the feature. The ort/model lanes
# are built with `--features conformance` (see the Justfile).
[[test]]
name = "bdd"
harness = false
