[package]
name = "hologram-ai-gguf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GGUF format support for hologram-ai"

[dependencies]
hologram.workspace = true
hologram-ai-common.workspace = true

thiserror.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
half.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true

[dev-dependencies]
criterion.workspace = true
