[package]
name    = "hologram-ai-gguf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hologram-ai-common.workspace = true
hologram-ai-quant.workspace  = true
memmap2.workspace    = true
half.workspace       = true
anyhow.workspace     = true
thiserror.workspace  = true
bytes.workspace      = true
