[package]
name = "hologram-ai-onnx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ONNX format support for hologram-ai"

[dependencies]
hologram.workspace = true
hologram-ai-common.workspace = true

# Protobuf
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true

# Core
thiserror.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
ahash.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
rayon.workspace = true
half.workspace = true
rkyv.workspace = true

# Shape inference (pure Rust, no Python dependency)
rten-shape-inference = "0.24"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
# hologram-ai = { path = "../hologram-ai" }
serial_test = "3.0"

[[bench]]
name = "simd_activation_bench"
harness = false
