[package]
name = "hologram-ai-onnx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ONNX format support for hologram-ai"

[dependencies]
hologram.workspace = true
hologram-ai-common.workspace = true

# Protobuf
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true

# Core
thiserror.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
ahash.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
rayon.workspace = true
half.workspace = true
# Use rkyv 0.7 to match hologram's version (workspace uses 0.8)
rkyv = { version = "0.7", features = ["validation"] }

# Shape inference (pure Rust, no Python dependency)
rten-shape-inference = "0.24"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile.workspace = true
