[package]
name    = "hologram-ai-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser (WebAssembly) entry point for hologram-ai — the real compile/run/generate pipeline, parallel-free. See ADR-0017."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The real pipeline, reused: ModelCompiler + HoloRunner + the generation loop.
# `default-features = false` drops the native downloader + rayon (neither builds
# on wasm32), leaving the compile/run/generate core. See ADR-0017.
hologram-ai = { path = "../hologram-ai", default-features = false }
hologram-ai-tokenizer.workspace = true
half.workspace = true

# The whole browser graph resolves the host-shell substrate stack no_std (see
# ADR-0018): `hologram-ai` above is pulled `default-features = false`, and the
# workspace pins the substrate stack + `hologram-ai-common` the same way, so
# nothing enables `hologram-backend/std` and the `Atomics.wait` futex path
# compiles. `hologram-ai-tokenizer` keeps its default `std` *capability* feature
# (JSON/archive loading) — that only links the host deps; they are themselves
# no_std here by feature unification.

wasm-bindgen = "0.2"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
holospaces.workspace = true
js-sys = "0.3.103"
blake3.workspace = true
hologram-ai-safetensors = { version = "0.1.0", path = "../hologram-ai-safetensors" }
serde_json.workspace = true
hologram-ai-common.workspace = true
anyhow.workspace = true

[features]
# Off by default → the single-threaded `+simd128` build (byte-identical to the
# pre-ADR-0018 browser build; the automatic fallback when the page is not
# cross-origin-isolated). On → the substrate embedder worker pool for multi-core
# decode; must be built shared-memory (`+atomics,+bulk-memory`). ADR-0018.
wasm-threads = ["hologram-ai/wasm-threads"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
# Build test-fixture models in-wasm (also exercises the compile path).
hologram-ai-common.workspace = true
anyhow.workspace = true
serde_json.workspace = true
