[package]
name    = "hologram-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hologram-ai"
path = "src/cli.rs"

[features]
default = ["parallel"]
# Multi-core execution (rayon), defaulted on for the native lib/CLI/benches so
# performance (class PV) is unchanged. The wasm build (`hologram-ai-wasm`) omits
# it — rayon cannot spawn threads on wasm32. See ADR-0017.
parallel = [
    "hologram-exec/parallel",
    "hologram-backend/parallel",
    "hologram-ai-common/parallel",
]
# Feature-gate large model E2E tests that require local model files (not run in CI).
e2e = []

[dependencies]
hologram-ai-common.workspace = true
hologram-ai-quant.workspace  = true
hologram-ai-onnx.workspace   = true
hologram-ai-tokenizer.workspace = true
# hologram 0.5.0 member crates (host-shell build: std + cpu backend + compiler).
hologram-types.workspace    = true
hologram-ops.workspace      = true
hologram-graph.workspace    = true
hologram-compiler.workspace = true
hologram-exec.workspace     = true
hologram-archive.workspace  = true
hologram-backend.workspace  = true
hologram-host.workspace     = true
uor-foundation = "0.5.2"
# Model-file content addressing (MA): mints a model's uor-addr κ-label used
# as its dedup / warm-start identity (architecture §8). The format features
# enable the ONNX / GGUF / JSON canonical realizations.
uor-addr = { version = "0.2", features = ["onnx", "gguf"] }

bytemuck.workspace     = true
anyhow.workspace       = true
thiserror.workspace    = true
futures.workspace      = true
clap.workspace         = true
tracing.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
toml.workspace         = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest.workspace    = true
indicatif.workspace  = true
tokio.workspace      = true
tempfile.workspace   = true
sha2.workspace       = true
dirs.workspace       = true
which.workspace      = true
memmap2.workspace    = true
rayon.workspace      = true
rkyv.workspace       = true
parking_lot.workspace = true

[dev-dependencies]
# Provides onnx_builder (pure Rust, no ORT) for mini fixture tests.
hologram-ai-conformance = { path = "../hologram-ai-conformance" }
# hologram-backend is accessed via hologram's re-export
bytemuck = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "inference"
harness = false

[[bench]]
name = "scaling"
harness = false
